kubernetes-dashboard/ingress-tls-fixes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: k8sdashboard-dev-private
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kubernetes.dashboard.alittlehub.com`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: kubernetes-dashboard-web
          port: 8000
          serversTransport: k8sdashboard-insecure-transport
      middlewares:
        - name: dashboard-auth
    # API
    - kind: Rule
      match: Host(`kubernetes.dashboard.alittlehub.com`) && PathPrefix(`/api`)
      services:
        - kind: Service
          name: kubernetes-dashboard-api
          port: 8000
          serversTransport: k8sdashboard-insecure-transport
      middlewares:
        - name: dashboard-auth
    # Auth
    - kind: Rule
      match: Host(`kubernetes.dashboard.alittlehub.com`) && PathPrefix(`/auth`)
      services:
        - kind: Service
          name: kubernetes-dashboard-auth
          port: 8000
          serversTransport: k8sdashboard-insecure-transport
      middlewares:
        - name: dashboard-auth
  tls:
    secretName: kubernetes-dashboard-tls-secret
